# Praticas-9

./: README.md  data_test.py  pyproject.toml
